tests/neg-custom-args/captures/sep-box.check
-- Error: tests/neg-custom-args/captures/sep-box.scala:41:9 ------------------------------------------------------------
41 |  par(h1.value, h2.value) // error
   |      ^^^^^^^^
   |Separation failure: argument of type  Ref^{xs*}
   |to method par: (x: Ref^, y: Ref^): Unit
   |corresponds to capture-polymorphic formal parameter x of type  Ref^
   |and hides capabilities  {xs*}.
   |Some of these overlap with the captures of the second argument with type  Ref^{xs*}.
   |
   |  Hidden set of current argument        : {xs*}
   |  Hidden footprint of current argument  : {xs*}
   |  Capture set of second argument        : {xs*}
   |  Footprint set of second argument      : {xs*}
   |  The two sets overlap at               : {xs*}
   |
   |where:    ^ refers to a root capability classified as Unscoped created in method test when checking argument to parameter x of method par
